tests/ifcc-test-output/testfiles-part4_3-errorSyntax/gcc-compile.txt
input.c: In function ‘main’:
input.c:3:5: warning: statement with no effect [-Wunused-value]
     variable 10;
     ^~~~~~~~
input.c:3:13: error: expected ‘;’ before numeric constant
     variable 10;
             ^~~
             ;

return code: 1
